# exam-countdown

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: discord_publisher.py  image_generator.py  main.py
src/: fb_publisher.py  ig_publisher.py  main.py
src/core/: cloudinary_uploader.py  discord_publisher.py  fb_publisher.py  ig_publisher.py  image_generator.py  job.py  ntfy_publisher.py
src/web/: app.py  auth.py  db.py  models.py  repository.py  scheduler.py
src/web/routes/: auth.py  config.py  logs.py  output.py  setup.py  stream.py  template.py  test.py
src/web/static/: config.js
src/web/templates/: _log_entry.html  base.html  config.html  login.html  logs.html  setup.html  test.html
