[project]
name = "exam-countdown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "cloudinary>=1.44.2",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
